@@ -34,7 +34,7 @@ RHEL.  On RHEL 5, the default RPM source directory is
 
 2. Install build prerequisites:
 
-   yum install gcc make python-devel openssl-devel kernel-devel \
+   yum install gcc make python-devel openssl-devel kernel-devel, graphviz \
        kernel-debug-devel autoconf automake rpm-build redhat-rpm-config
 
 3. Some versions of the RHEL 6 kernel-devel package contain a broken
