@@ -1,40 +1,0 @@
-digraph Open_vSwitch {
-	rankdir=LR;
-	size="6.5,4";
-	margin="0";
-	node [shape=box];
-	edge [dir=none, arrowhead=none, arrowtail=none];
-	Bridge [];
-	Bridge -> sFlow [label="sflow?"];
-	Bridge -> Mirror [label="mirrors*"];
-	Bridge -> IPFIX [label="ipfix?"];
-	Bridge -> Port [label="ports*"];
-	Bridge -> Controller [label="controller*"];
-	Bridge -> Flow_Table [label="flow_tables value*"];
-	Bridge -> NetFlow [label="netflow?"];
-	QoS [style=bold];
-	QoS -> Queue [label="queues value*"];
-	sFlow [];
-	Flow_Sample_Collector_Set [style=bold];
-	Flow_Sample_Collector_Set -> Bridge [label="bridge"];
-	Flow_Sample_Collector_Set -> IPFIX [label="ipfix?"];
-	IPFIX [];
-	Open_vSwitch [style=bold];
-	Open_vSwitch -> Bridge [label="bridges*"];
-	Open_vSwitch -> SSL [label="ssl?"];
-	Open_vSwitch -> Manager [label="manager_options*"];
-	Controller [];
-	Flow_Table [];
-	Queue [style=bold];
-	SSL [];
-	Manager [];
-	Mirror [];
-	Mirror -> Port [style=dotted, constraint=false, label="select_src_port*"];
-	Mirror -> Port [style=dotted, constraint=false, label="output_port?"];
-	Mirror -> Port [style=dotted, constraint=false, label="select_dst_port*"];
-	Interface [];
-	NetFlow [];
-	Port [];
-	Port -> QoS [label="qos?"];
-	Port -> Interface [label="interfaces+"];
-}
